# HuynhNhan0104-smartpole_screen_qt6.7.2

./: CMakeLists.txt  Main.qml  README.md  RadialBarProgress.qml  VideoView.qml  appsmartpole_screen  config.json  dashboardController.cpp  dashboardController.h  httpHandler.cpp  httpHandler.h  main.cpp  mqttHandler.cpp  mqttHandler.h  videoController.cpp  videoController.h
serial/: ODR_01.cpp  ODR_01.h  auto_connect.cpp  auto_connect.h  rs485.cpp  rs485.h  serial_interface.cpp  serial_interface.h  serial_port.cpp  serial_port.h
